--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browserify": "^13.0.1"
+    "backbone": "^1.3.3",
+    "browserify": "^13.0.1",
+    "jquery": "^3.0.0"
   }
 }
