--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/browserify/bin/cmd.js js/main.js -o bundle.js"
+    "build": "./node_modules/browserify/bin/cmd.js js/main.js -o bundle.js",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "backbone": "^1.3.3",
+    "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
+    "express": "^4.14.0",
     "jquery": "^3.0.0"
   }
 }
