--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/browserify/bin/cmd.js js/main.js -o bundle.js",
-    "start": "node server.js"
+    "start": "npm run build && node server.js"
   },
   "keywords": [],
   "author": "",
