--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "body-parser": "^1.15.2",
     "browserify": "^13.0.1",
     "express": "^4.14.0",
-    "jquery": "^3.0.0"
+    "jquery": "^3.0.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "expect.js": "^0.3.1"
   }
 }
