--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jquery": "^3.0.0"
   },
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "expect": "^1.20.2",
+    "expect.js": "^0.3.1"
   }
 }
